Tung: Fix bugs
- FIx scrollbar ngang
- Fix CSS
- Hết rồi

--- a/ParkingWebAppFE/src/app/customer/add-customer/add-customer.component.css
+++ b/ParkingWebAppFE/src/app/customer/add-customer/add-customer.component.css
@@ -1,13 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, consolas;
-  background-color: #ddd;
-}
 
 /*H2*/
 h2{
@@ -57,9 +47,11 @@ h2{
 /*Lưu, thêm*/
 .btn-creat{
   width: 150px;
+  height: 35px;
 }
 
 .btn-save{
-  /*position: absolute;*/
+  margin-top: 15px;
   width: 150px;
+  height: 35px;
 }
